--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 
 # but do track lib.a, even though you're ignoring .a files above
 !lib.a
-
+.env
 # only ignore the TODO file in the current directory, not subdir/TODO
 /TODO
-
+uploads
 # ignore all files in the build/ directory
 build/
 
