--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
