--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.2.0",
     "mongo": "^0.1.0",
     "mongod": "^2.0.0",
-    "mongoose": "^5.11.7",
+    "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "postcss-loader": "^4.1.0",
@@ -41,7 +45,8 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss'",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "build:assets": "cross-env WEBPACK_ENV=production webpack",
+    "tunnel": "lt --port 4000"
   },
   "browserslist": [
     "defaults"
