changepassoword, getting a creator

--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "mini-css-extract-plugin": "^1.3.3"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss'",
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss'--ignore 'static'",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack",
     "tunnel": "lt --port 4000"
+    
   },
   "browserslist": [
     "defaults"
