--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
     "mongo": "^0.1.0",
@@ -30,6 +31,7 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "path": "^0.12.7",
     "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
     "webpack": "^5.10.1",
@@ -47,7 +49,6 @@
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack",
     "tunnel": "lt --port 4000"
-    
   },
   "browserslist": [
     "defaults"
